# local_climatological_data

./: README.md  classify.py  core.py  lcd_v0.3.0.patch  pyproject.toml  schema.py  test.ipynb
lcd/: __init__.py  cities.py  classify.py  core.py  download.py  progress.py  schema.py
lcd/data/: airports.stations
lcd/data/example_download/: 01001099999.csv
