[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "local-climatological-data"
version = "0.2.0"
description = "Download, clean, and load NOAA Local Climatological Data hourly station records."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jared Kodero" }]
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "xarray>=2023.1",
    "netCDF4>=1.6",
    "requests>=2.28",
]

[project.optional-dependencies]
cities = ["cartopy>=0.22"]
progress = ["rich>=13.0"]

[project.urls]
Repository = "https://github.com/Jared-Kodero/local_climatological_data"

[tool.setuptools]
packages = ["lcd"]

[tool.setuptools.package-data]
lcd = ["data/*.stations"]
